Fixed: - issue with ipad fullscreen orientation change - issue with gear menu not aligned correctly

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -1099,6 +1099,12 @@ td.right-border{
   margin-top: -210px;
   margin-left: -184px;
 }
+
+.ipad .top-dropdown{
+  margin-top: -160px;
+  margin-left: -184px;
+}
+
 .top-dropdown:before{
   border: inset 0px;
   border-color: transparent transparent transparent transparent;
